2001-03-25  Bharat Mediratta  <bharat@menalto.com>

	* Fixed a bug in the setup code that caused you not to see the
	  details when the magic-quotes check fails.

	* Cleaned up the instructions you receive when gallery is un- or
	  mis-configured.

	* Fixed a bug where we were relying on the SCRIPT_FILENAME and
	  SCRIPT_NAME ennvironment variables to determine our filesystem
	  path.  On servers which use PHP in a cgi-bin context, these
	  point to the PHP binary, instead of to the PHP files we're
	  evaluating.  Instead we use the HTTP_SERVER_VARS (PATH_TRANSLATED,
	  and PHP_SELF).

2001-03-24  Bharat Mediratta  <bharat@menalto.com>

	* Released version 1.0b9

	* Disallow PHP 4.0.2 in the setup wizard because it has a bug in
	  its unserialization engine.  I also added explanations for the
	  disallowed versions.

	* Fixed the show/hide bug where you'd see unpredictable results
	  when showing/hiding photos.

	* Fixed a bug where we were printing out jpegtopnm debug info only
	  when debug was *off*.

	* Fixed zipfile-sorting bug.  I was using SORT_NUMERIC inappropriately.

	* Added code to check to see if the version of PHP being used has
	  the deserialization bug (early versions of PHP4 have it), and
	  then present an appropriate error message.

2001-03-17  Bharat Mediratta  <bharat@menalto.com>

	* Released version 1.0b8

2001-03-15  Alan Harder <alan.harder@sun.com>

	* Revamped fit-to-window code; now fully functional.
	  (works for IE and Navigator and keeps the border around the image)

2001-03-13  Chris Smith <chris@jacko.com>

	* Added "Order This Photo on Shutterfly" capability.
	  this is an optional album setting.

2001-03-12  Chris Smith <chris@jacko.com>

	* Added 'Edit Thumbnail' image editing command to the view_album
	  page. This allows you to choose a sub-region of the image as
	  your thumbnail. The magic happens in a java applet.

	* Moved all image editing commands on the view_album page to
	  dropdowns (form selects) to clean up the UI.
